--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,2 @@
 RewriteEngine On
-
-RewriteCond %{REQUEST_FILENAME} !-f 
-RewriteCond %{REQUEST_FILENAME} !-d 
-
-RewriteRule ^ public/index.php [L]
+RewriteRule ^ public/index.php 
